@@ -36,6 +36,8 @@ typedef void (* DirListDoneFunc) (GnomeCmdDir *dir,
                                   GList *files,
                                   GnomeVFSResult result);
 
+#include <string>
+
 #include "gnome-cmd-file.h"
 #include "gnome-cmd-con.h"
 #include "handle.h"
@@ -111,12 +113,14 @@ gchar       *gnome_cmd_dir_get_uri_str (GnomeCmdDir *dir);
 GnomeVFSURI *gnome_cmd_dir_get_child_uri (GnomeCmdDir *dir, const gchar *filename);
 gchar       *gnome_cmd_dir_get_child_uri_str (GnomeCmdDir *dir, const gchar *filename);
 
+GnomeVFSURI *gnome_cmd_dir_get_absolute_path_uri (GnomeCmdDir *dir, std::string &filename);
+
 void gnome_cmd_dir_file_created (GnomeCmdDir *dir, const gchar *filename);
 void gnome_cmd_dir_file_deleted (GnomeCmdDir *dir, const gchar *filename);
 void gnome_cmd_dir_file_changed (GnomeCmdDir *dir, const gchar *filename);
 void gnome_cmd_dir_file_renamed (GnomeCmdDir *dir, GnomeCmdFile *finfo);
-
 gboolean gnome_cmd_dir_uses_fam (GnomeCmdDir *dir);
+
 void gnome_cmd_dir_start_monitoring (GnomeCmdDir *dir);
 void gnome_cmd_dir_cancel_monitoring (GnomeCmdDir *dir);
 gboolean gnome_cmd_dir_is_local (GnomeCmdDir *dir);
